--- a/example_config_files/nk8o_k4macro.yaml
+++ b/example_config_files/nk8o_k4macro.yaml
@@ -176,9 +176,11 @@
     - { text: " 0 dB", cmd: RA000; }
     - { text: " 3 dB", cmd: RA031; }
     - { text: " 6 dB", cmd: RA061; }
+    - { text: " 9 dB", cmd: RA091; }
     - { text: "12 dB", cmd: RA121; }
     - { text: "15 dB", cmd: RA151; }
     - { text: "18 dB", cmd: RA181; }
+    - { text: "21 dB", cmd: RA211; }
 #end
 
 #define rfgain_A_dropdown
@@ -296,9 +298,11 @@
     - { text: " 0 dB", cmd: RA$000; }
     - { text: " 3 dB", cmd: RA$031; }
     - { text: " 6 dB", cmd: RA$061; }
+    - { text: " 9 dB", cmd: RA$091; }
     - { text: "12 dB", cmd: RA$121; }
     - { text: "15 dB", cmd: RA$151; }
     - { text: "18 dB", cmd: RA$181; }
+    - { text: "21 dB", cmd: RA$211; }
 #end
 
 #define rfgain_B_dropdown
