Display active VFO and transmitting VFO
Color the VFO frequency (currently pink) of the active VFO. While
transmitting, color the VFO with the transmit freu=quency (currently
red).

--- a/example_config_files/k4macro.yaml
+++ b/example_config_files/k4macro.yaml
@@ -108,7 +108,7 @@
 #end
 
 #define VFO_A
-- { item: vfo, AorB: A, width: 9, font: { family: Helvetica, size: 19, weight: normal } }
+- { item: vfo, AorB: A, width: 9, font: { family: Helvetica, size: 19, weight: normal }, activecolor: pink, transmitcolor: red }
 - item: bargraph
   maximum: 42
   lengthpercent: 96
@@ -229,7 +229,7 @@
 #end
 
 #define VFO_B
-- { item: vfo, AorB: B, width: 9, font: { family: Helvetica, size: 19, weight: normal } }
+- { item: vfo, AorB: B, width: 9, font: { family: Helvetica, size: 19, weight: normal }, activecolor: pink, transmitcolor: red }
 - item: bargraph
   maximum: 42
   lengthpercent: 96
